# ebu-libmxf

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  gen_scm_version.sh  libMXF.pc.in
examples/: Makefile.am
examples/archive/info/: Makefile.am  archive_mxf_info.c  archive_mxf_info_lib.c  archive_mxf_info_lib.h
examples/archive/test/: Makefile.am  check.sh  create.sh  test_1080_25i_10b.md5  test_1080_25i_10b.test  test_1080_25i_8b.md5  test_1080_25i_8b.test  test_1080_25p_8b.md5  test_1080_25p_8b.test  test_1080_29i_8b.md5  test_1080_29i_8b.test  test_1080_29p_8b.md5  test_1080_29p_8b.test  test_1080_50p_8b.md5  test_1080_50p_8b.test  test_1080_59p_8b.md5  test_1080_59p_8b.test  test_720_25p_8b.md5  test_720_25p_8b.test  test_720_29p_8b.md5  test_720_29p_8b.test  test_720_50p_8b.md5  test_720_50p_8b.test  test_720_59p_8b.md5  test_720_59p_8b.test  test_sd_25i_10b.md5  test_sd_25i_10b.test  test_sd_25i_8b.md5  test_sd_25i_8b.test  test_sd_29i_8b.md5  test_sd_29i_8b.test  test_timecode_index.c  test_write_archive_mxf.c
examples/archive/write/: Makefile.am  timecode_index.c  timecode_index.h  write_archive_mxf.c  write_archive_mxf.h
examples/avidmxfinfo/: Makefile.am  avid_mxf_info.c  avid_mxf_info.h  main.c  test_avidmxfinfo.sh
examples/reader/: Makefile.am  mxf_essence_helper.c  mxf_essence_helper.h  mxf_index_helper.c  mxf_index_helper.h  mxf_op1a_reader.c  mxf_op1a_reader.h  mxf_opatom_reader.c  mxf_opatom_reader.h  mxf_reader.c  mxf_reader.h  mxf_reader_int.h  test_mxf_reader.c
examples/transfertop2/: Makefile.am  avid_mxf_to_p2.c  avid_mxf_to_p2.h  avidp2transfer.cpp  avidp2transfer.h  test_avidp2transfer.cpp  xml_writer.c  xml_writer.h
examples/writeavidmxf/: Makefile.am  main.c  package_definitions.c  package_definitions.h  test_writeavidmxf.sh  write_avid_mxf.c  write_avid_mxf.h
msvc_build/: MXFDump.sln  Makefile.am  inttypes.h  libMXF-All.sln
msvc_build/examples/archive/archivemxfinfo/: archivemxfinfo.vcproj
msvc_build/examples/archive/test_writearchivemxf/: test_writearchivemxf.vcproj
msvc_build/examples/archive/writearchivemxf/: writearchivemxf.vcproj
msvc_build/examples/avidmxfinfo/: avidmxfinfo.vcproj
msvc_build/examples/transfertop2/avidp2transfer/: avidp2transfer.vcproj
msvc_build/examples/transfertop2/test_avid_mxf_to_p2/: test_avid_mxf_to_p2.vcproj
msvc_build/examples/transfertop2/test_avidp2transfer/: test_avidp2transfer.vcproj
msvc_build/examples/writeavidmxf/: writeavidmxf.vcproj
msvc_build/mxf/: libMXF.vcproj
msvc_build/tools/MXFDump/: MXFDump.vcproj
msvc_build/vs10/: MXFDump.sln  Makefile.am  libMXF-All.sln  mxf_scm_version.h  readme_MXFDump.txt  readme_transfertop2.txt  test.sln  transfertop2.sln
msvc_build/vs10/examples/archive/archivemxfinfo/: archivemxfinfo.vcxproj  archivemxfinfo.vcxproj.filters
msvc_build/vs10/examples/archive/test_writearchivemxf/: test_writearchivemxf.vcxproj  test_writearchivemxf.vcxproj.filters
msvc_build/vs10/examples/archive/writearchivemxf/: writearchivemxf.vcproj  writearchivemxf.vcxproj  writearchivemxf.vcxproj.filters
msvc_build/vs10/examples/avidmxfinfo/: avidmxfinfo.vcxproj  avidmxfinfo.vcxproj.filters
msvc_build/vs10/examples/transfertop2/avidp2transfer/: avidp2transfer.vcxproj  avidp2transfer.vcxproj.filters
msvc_build/vs10/examples/transfertop2/test_avid_mxf_to_p2/: test_avid_mxf_to_p2.vcxproj  test_avid_mxf_to_p2.vcxproj.filters
msvc_build/vs10/examples/transfertop2/test_avidp2transfer/: test_avidp2transfer.vcproj  test_avidp2transfer.vcxproj  test_avidp2transfer.vcxproj.filters
msvc_build/vs10/examples/writeavidmxf/: writeavidmxf.vcproj  writeavidmxf.vcxproj  writeavidmxf.vcxproj.filters
msvc_build/vs10/mxf/: libMXF.vcproj  libMXF.vcxproj  libMXF.vcxproj.filters
msvc_build/vs10/test/test_datamodel/: test_datamodel.vcproj
msvc_build/vs10/test/test_headermetadata/: test_headermetadata.vcproj
msvc_build/vs10/test/test_indextable/: test_indextable.vcproj
msvc_build/vs10/test/test_mxf_page_file/: test_mxf_page_file.vcproj
msvc_build/vs10/tools/MXFDump/: MXFDump.vcxproj  MXFDump.vcxproj.filters
msvc_build/vs8/: MXFDump.sln  Makefile.am  inttypes.h  transfertop2.sln
msvc_build/vs8/examples/avidmxfinfo/: avidmxfinfo.vcproj
msvc_build/vs8/mxf/: libMXF.vcproj
msvc_build/vs8/test/test_essencecontainer/: test_essencecontainer.vcproj
msvc_build/vs8/test/test_file/: test_file.vcproj
msvc_build/vs8/test/test_mxf_memory_file/: test_mxf_memory_file.vcproj
msvc_build/vs8/test/test_partition/: test_partition.vcproj
msvc_build/vs8/test/test_primer/: test_primer.vcproj
msvc_build/vs8/tools/MXFDump/: MXFDump.vcproj
mxf/: Makefile.am  mxf.h  mxf_app.c  mxf_app.h  mxf_app_extensions_data_model.h  mxf_app_types.h  mxf_avid.c  mxf_avid.h  mxf_avid_dictionary.c  mxf_avid_dictionary.h  mxf_avid_extensions_data_model.h  mxf_avid_labels_and_keys.h  mxf_avid_metadictionary.c  mxf_avid_metadictionary.h  mxf_avid_metadictionary_data.h  mxf_baseline_data_model.h  mxf_cache_file.c  mxf_cache_file.h  mxf_data_model.c  mxf_data_model.h  mxf_essence_container.c  mxf_essence_container.h  mxf_file.c  mxf_file.h  mxf_header_metadata.c  mxf_header_metadata.h  mxf_index_table.c  mxf_index_table.h  mxf_labels_and_keys.c  mxf_labels_and_keys.h  mxf_list.c  mxf_list.h  mxf_logging.c  mxf_logging.h  mxf_macros.h  mxf_memory_file.c  mxf_memory_file.h  mxf_p2.h  mxf_page_file.c  mxf_page_file.h  (+16 more)
test/: Makefile.am  file_md5.c  test_datamodel.test  test_essencecontainer.c  test_essencecontainer.md5  test_essencecontainer.test  test_file.c  test_file.test  test_headermetadata.c  test_headermetadata.md5  test_headermetadata.test  test_indextable.c  test_indextable.md5  test_indextable.test  test_mxf_cache_file.c  test_mxf_cache_file.test  test_mxf_memory_file.c  test_mxf_memory_file.test  test_mxf_page_file.c  test_mxf_page_file.test  test_mxf_rw_intl_file.c  test_mxf_rw_intl_file.test  test_partition.c  test_partition.md5  test_partition.test  test_primer.c  test_primer.md5  test_primer.test
tools/MXFDump/: MXFDump.cpp  MXFLabels.h  MXFMetaDictionary.h  Makefile.am
(+16 files in other folders)
