EXTRA_DIST = \
	inttypes.h \
	libMXF-All.sln \
	MXFDump.sln \
	readme_MXFDump.txt \
	readme_transfertop2.txt \
	transfertop2.sln \
	mxf/libMXF.vcproj \
	examples/archive/archivemxfinfo/archivemxfinfo.vcproj \
	examples/archive/test_writearchivemxf/test_writearchivemxf.vcproj \
	examples/archive/writearchivemxf/writearchivemxf.vcproj \
	examples/avidmxfinfo/avidmxfinfo.vcproj \
	examples/transfertop2/avidp2transfer/avidp2transfer.vcproj \
	examples/transfertop2/test_avid_mxf_to_p2/test_avid_mxf_to_p2.vcproj \
	examples/transfertop2/test_avidp2transfer/test_avidp2transfer.vcproj \
	examples/writeavidmxf/writeavidmxf.vcproj \
	tools/MXFDump/MXFDump.vcproj

