check_PROGRAMS = \
	file_md5 \
	test_file \
	test_partition \
	test_primer \
	test_indextable \
	test_datamodel \
	test_essencecontainer \
	test_headermetadata \
	test_mxf_cache_file \
	test_mxf_page_file \
	test_mxf_memory_file \
	test_mxf_rw_intl_file

AM_CFLAGS = $(LIBMXF_CFLAGS)
LDADD = $(LIBMXF_LDADDLIBS)


TESTS = \
	test_file.test \
	test_datamodel.test \
	test_essencecontainer.test \
	test_headermetadata.test \
	test_indextable.test \
	test_partition.test \
	test_primer.test \
	test_mxf_cache_file.test \
	test_mxf_page_file.test \
	test_mxf_memory_file.test \
	test_mxf_rw_intl_file.test



EXTRA_DIST = \
	test_datamodel.test \
	test_essencecontainer.test \
	test_file.test \
	test_headermetadata.test \
	test_indextable.test \
	test_partition.test \
	test_primer.test \
	test_mxf_cache_file.test \
	test_mxf_page_file.test \
	test_mxf_memory_file.test \
	test_mxf_rw_intl_file.test \
	test_essencecontainer.md5 \
	test_headermetadata.md5 \
	test_indextable.md5 \
	test_partition.md5 \
	test_primer.md5


