EXTRA_DIST = \
	inttypes.h \
	libMXF-All.sln \
	MXFDump.sln \
	readme_MXFDump.txt \
	readme_transfertop2.txt \
	transfertop2.sln \
	mxf/libMXF.vcxproj \
	mxf/libMXF.vcxproj.filters \
	mxf/gen_scm_version.cmd \
	examples/archive/archivemxfinfo/archivemxfinfo.vcxproj \
	examples/archive/archivemxfinfo/archivemxfinfo.vcxproj.filters \
	examples/archive/test_writearchivemxf/test_writearchivemxf.vcxproj \
	examples/archive/test_writearchivemxf/test_writearchivemxf.vcxproj.filters \
	examples/archive/writearchivemxf/writearchivemxf.vcxproj \
	examples/archive/writearchivemxf/writearchivemxf.vcxproj.filters \
	examples/avidmxfinfo/avidmxfinfo.vcxproj \
	examples/avidmxfinfo/avidmxfinfo.vcxproj.filters \
	examples/transfertop2/avidp2transfer/avidp2transfer.vcxproj \
	examples/transfertop2/avidp2transfer/avidp2transfer.vcxproj.filters \
	examples/transfertop2/test_avid_mxf_to_p2/test_avid_mxf_to_p2.vcxproj \
	examples/transfertop2/test_avid_mxf_to_p2/test_avid_mxf_to_p2.vcxproj.filters \
	examples/transfertop2/test_avidp2transfer/test_avidp2transfer.vcxproj \
	examples/transfertop2/test_avidp2transfer/test_avidp2transfer.vcxproj.filters \
	examples/writeavidmxf/writeavidmxf.vcxproj \
	examples/writeavidmxf/writeavidmxf.vcxproj.filters \
	tools/MXFDump/MXFDump.vcxproj \
	tools/MXFDump/MXFDump.vcxproj.filters

