EXTRA_DIST = \
	inttypes.h \
	libMXF-All.sln \
	MXFDump.sln \
	readme_MXFDump.txt \
	readme_transfertop2.txt \
	transfertop2.sln \
	mxf/libMXF.vcproj \
	mxf/gen_scm_version.cmd \
	examples/archive/archivemxfinfo/archivemxfinfo.vcproj \
	examples/archive/test_writearchivemxf/test_writearchivemxf.vcproj \
	examples/archive/writearchivemxf/writearchivemxf.vcproj \
	examples/avidmxfinfo/avidmxfinfo.vcproj \
	examples/transfertop2/avidp2transfer/avidp2transfer.vcproj \
	examples/transfertop2/test_avid_mxf_to_p2/test_avid_mxf_to_p2.vcproj \
	examples/transfertop2/test_avidp2transfer/test_avidp2transfer.vcproj \
	examples/writeavidmxf/writeavidmxf.vcproj \
	tools/MXFDump/MXFDump.vcproj \
	test/test_datamodel/test_datamodel.vcproj \
	test/test_essencecontainer/test_essencecontainer.vcproj \
	test/test_file/test_file.vcproj \
	test/test_headermetadata/test_headermetadata.vcproj \
	test/test_indextable/test_indextable.vcproj \
	test/test_mxf_memory_file/test_mxf_memory_file.vcproj \
	test/test_mxf_page_file/test_mxf_page_file.vcproj \
	test/test_partition/test_partition.vcproj \
	test/test_primer/test_primer.vcproj

